--- a/docs/.vuepress/styles/palette.styl
+++ b/docs/.vuepress/styles/palette.styl
@@ -4,7 +4,17 @@
  * ref：https://v1.vuepress.vuejs.org/zh/config/#palette-styl
  */
 
-$accentColor = #3eaf7c
+// Original: 
+// $accentColor = #3eaf7c
+// Used for links, among other things
+$accentColor = #3C7EB8
+
+// $textColor is inherited all the hell
+// over the place.
 $textColor = #2c3e50
 $borderColor = #eaecef
-$codeBgColor = #282c34
+// vuepress-pallete-styl-textcolor-default.png
+// vuepress-pallete-styl-textcolor-change.png
+// Background color for code blocks
+// Original: #282c34
+$codeBgColor = whitesmoke
