--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -33,20 +33,13 @@ $blockQuoteColor = black // #383838
 $h1Color = black 
 $h2Color = #DF7D2C
 
-//@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
-//@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Lato:400,700&display=swap')
 @import url('http://fonts.googleapis.com/css?family=Arvo:400,700|Arvo')
 
-// Can now specify font-family: "system"
-// Source:
-// https://css-tricks.com/snippets/css/system-font-stack/#article-header-id-0
-// BUG: Don't think open sans works
+// TODO: Find out why the hell I can't get rid of this. It's a cancer!
 @font-face {
-  font-family: system;
-  font-style: normal;
-  src: local("Lato"), local(".SFNSText-Light"), local(".HelveticaNeueDeskInterface-Light"), local(".LucidaGrandeUI"), local("Ubuntu Light"), local("Segoe UI Light"), local("Roboto-Light"), local("DroidSans"), local("Tahoma");
-}
+ }
+
 
 // Custom page class:
 // https://v1.vuepress.vuejs.org/theme/default-theme-config.html#custom-page-class
